local strategy working

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -2,7 +2,7 @@
 
 <div class="background">
   <div class="form-container">
-    <form action="/user/create-session" method="post">
+    <form action="/auth/create-session" method="post">
       <div class="form-group">
         <label>Email</label>
         <input class="form-control" type="text" name="email" required />
