google strategy working

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,7 +1,7 @@
 <header>
   <link rel="stylesheet" href="/css/header.css" />
 
-  <a href="/"><h1>Sample Auth App</h1></a>
+  <a href="/seller/"><h1>Sample Auth App</h1></a>
 
   <% if(locals.user){ %>
   <p><%= user.name %></p>
