--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -14,7 +14,7 @@
     </form>
 
     <p>
-      <a href="/user/auth/google">Sign in with Google</a>
+      <a href="/auth/google">Sign in with Google</a>
     </p>
   </div>
 </div>
