--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,7 +28,7 @@
     </form>
 
     <p>
-      <a href="/user/auth/google">Sign up with Google</a>
+      <a href="/auth/google">Sign up with Google</a>
     </p>
   </div>
 </div>
