--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,12 +1,9 @@
-.home-container{
-    h1{
-        position: relative;
-        top: 3vh;
-        left: 6vh;
-        font-size: 3rem;
-    }
-    #dummy{
-        width: auto;
-        height: 90%;
-    }
+.home-container {
+  padding: 30px;
+  position: relative;
+
+  #dummy {
+    width: auto;
+    height: 90%;
+  }
 }
