--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,9 @@
 <link rel="stylesheet" href="/css/home.css" />
 
 <div class="home-container">
-  <h1>Welcome <%= title %></h1>
+  <h1>Your Property Ads:</h1>
+
+  <%- include('_property_cards') %>
+
   <div id="dummy"></div>
 </div>
