details page designed

--- a/assets/css/property_cards.css
+++ b/assets/css/property_cards.css
@@ -16,14 +16,17 @@
     width: 200px;
     height: 300px;
     margin: 20px;
+    padding: 6px;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     justify-content: start; }
     #property-container .property-item img {
+      margin: auto;
       border-radius: 10px; }
     #property-container .property-item .card-title {
+      margin: auto;
       padding: 6px 6px 0px 6px;
       font-size: 1.5rem; }
     #property-container .property-item .application-count {
