--- a/views/_property_cards.ejs
+++ b/views/_property_cards.ejs
@@ -3,16 +3,15 @@
 
 <div id="property-container">
 
-    <a id="add-btn" href="/property/form?type=add">
+    <a id="add-btn" href="/property/form?type=create">
         <div class="property-item add-btn">
-        <span class="card-title" >Add New Property</span>
-            <img width=200px height=160px></img>
-            A big Plus button
+          <img src="https://cdn.onlinewebfonts.com/svg/img_51677.png" width=160px height=160px></img>
+          <span class="card-title" style="font-size: medium;" >Add New Property</span>
         </div>
     </a>
     
-    <div class="property-item">
-        <img width=200px height=160px></img>
+    <div class="property-item" id="prop-...">
+        <img width=200px height=160px src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.wrGDCtxJc2rb9rgfGaQSCwHaE7%26pid%3DApi&f=1"></img>
         <span class="card-title">Title</span>
         <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
         <div class="card-btn-container">
@@ -23,57 +22,35 @@
 
 
     <div class="property-item">
-        <img width=200px height=160px></img>
-        <span class="card-title">Title</span>
-        <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
-        <div class="card-btn-container">
-          <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
-          <a href="#"><button>Delete</button></a>
-        </div>
+      <img width=200px height=160px src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.wrGDCtxJc2rb9rgfGaQSCwHaE7%26pid%3DApi&f=1"></img>
+      <span class="card-title">Title</span>
+      <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
+      <div class="card-btn-container">
+        <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
+        <a href="#"><button>Delete</button></a>
+      </div>
     </div>
 
     <div class="property-item">
-        <img width=200px height=160px></img>
-        <span class="card-title">Title</span>
-        <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
-        <div class="card-btn-container">
-          <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
-          <a href="#"><button>Delete</button></a>
-        </div>
+      <img width=200px height=160px src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.wrGDCtxJc2rb9rgfGaQSCwHaE7%26pid%3DApi&f=1"></img>
+      <span class="card-title">Title</span>
+      <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
+      <div class="card-btn-container">
+        <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
+        <a href="#"><button>Delete</button></a>
+      </div>
     </div>
-
 
     <div class="property-item">
-        <img width=200px height=160px></img>
-        <span class="card-title">Title</span>
-        <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
-        <div class="card-btn-container">
-          <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
-          <a href="#"><button>Delete</button></a>
-        </div>
+      <img width=200px height=160px src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.wrGDCtxJc2rb9rgfGaQSCwHaE7%26pid%3DApi&f=1"></img>
+      <span class="card-title">Title</span>
+      <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
+      <div class="card-btn-container">
+        <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
+        <a href="#"><button>Delete</button></a>
+      </div>
     </div>
 
-
-    <div class="property-item">
-        <img width=200px height=160px></img>
-        <span class="card-title">Title</span>
-        <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
-        <div class="card-btn-container">
-          <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
-          <a href="#"><button>Delete</button></a>
-        </div>
-    </div>
-
-
-    <div class="property-item">
-        <img width=200px height=160px></img>
-        <span class="card-title">Title</span>
-        <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
-        <div class="card-btn-container">
-          <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
-          <a href="#"><button>Delete</button></a>
-        </div>
-    </div>
 
 
 
