--- a/assets/scss/property_cards.scss
+++ b/assets/scss/property_cards.scss
@@ -19,6 +19,7 @@
     width: 200px;
     height: 300px;
     margin: 20px;
+    padding: 6px;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     display: flex;
@@ -26,10 +27,12 @@
     justify-content: start;
 
     img {
+      margin: auto;
       border-radius: 10px;
     }
 
     .card-title {
+      margin: auto;
       padding: 6px 6px 0px 6px;
       font-size: 1.5rem;
     }
