properties controller implemented

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -1,5 +1,6 @@
 <div class="form-container" style="width: 60%; margin: auto; padding: 50px">
   <!-- or upd -->
+  <% if(locals.type=='create') {%>
   <form action="/property/create" method="post">
     <div class="form-group">
       <label>Title</label>
@@ -36,6 +37,7 @@
         type="number"
         min="1"
         step=".01"
+        name="rent"
         style="width: 80px"
         required
       />K/month<br />
@@ -45,6 +47,7 @@
         type="number"
         min="1"
         step=".01"
+        name="price"
         style="width: 80px"
         required
       />Lacs<br /><br />
@@ -70,6 +73,102 @@
       /><br />
     </div>
     <!-- Logic for upd/create -->
-    <button type="submit" class="btn btn-primary">Update/Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
+
+  <% } else { %>
+
+  <form action="/property/update/<%= current_property.id %>" method="post">
+    <div class="form-group">
+      <label>Title</label>
+      <input
+        class="form-control"
+        type="text"
+        name="title"
+        value="<%= current_property.title %>"
+        required
+      /><br />
+
+      <label>Description</label>
+      <textarea
+        class="form-control"
+        name="description"
+        cols="40"
+        rows="5"
+        required
+      >
+        <%= current_property.description %>
+      </textarea
+      ><br />
+
+      <label for="location">Location </label>
+      <select name="location" id="location">
+        <option value="<%= current_property.location %>" selected>
+          <%= current_property.location %>(selected)
+        </option>
+        <option value="Kolkata">Kolkata</option>
+        <option value="Bangalore">Bangalore</option>
+        <option value="Mumbai">Mumbai</option>
+        <option value="Delhi">Delhi</option>
+        <option value="Chennai">Chennai</option>
+      </select>
+      <br /><br />
+
+      <label for="type">Type</label>
+      <select name="type" id="type">
+        <option value="<%= current_property.type %>" selected>
+          <%= current_property.type %>(selected)
+        </option>
+        <option value="Rent">Rent</option>
+        <option value="Sale">Sale</option></select
+      ><br />
+
+      <label>Rent</label>
+      <input
+        type="number"
+        min="1"
+        step=".01"
+        name="rent"
+        style="width: 80px"
+        value="<%= current_property.rent %>"
+        required
+      />K/month<br />
+
+      <label>Sale</label>
+      <input
+        type="number"
+        min="1"
+        step=".01"
+        name="price"
+        style="width: 80px"
+        value="<%= current_property.price %>"
+        required
+      />Lacs<br /><br />
+
+      <label>Beds</label>
+      <input
+        type="number"
+        min="1"
+        step="1"
+        name="beds"
+        style="width: 80px"
+        value="<%= current_property.beds %>"
+        required
+      /><br />
+
+      <label>Baths</label>
+      <input
+        type="number"
+        min="1"
+        step="1"
+        name="baths"
+        style="width: 80px"
+        value="<%= current_property.baths %>"
+        required
+      /><br />
+    </div>
+    <button type="submit" class="btn btn-primary">Save</button>
+  </form>
+
+  <% } %>
 </div>
