--- a/assets/css/property_cards.css
+++ b/assets/css/property_cards.css
@@ -1,5 +1,5 @@
 #property-container {
-  height: 80%;
+  height: auto;
   width: 100%;
   margin: auto;
   padding: 20px;
@@ -8,17 +8,17 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  background-color: azure; }
+  background-color: #d8ebfd; }
   #property-container #add-btn {
     text-decoration: none; }
   #property-container .property-item {
-    background-color: #d0e8ff;
-    width: 200px;
+    background-color: #b8d5f0;
+    width: 215px;
     height: 300px;
     margin: 20px;
     padding: 6px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
     display: flex;
     flex-direction: column;
     justify-content: start; }
