--- a/views/_property_cards.ejs
+++ b/views/_property_cards.ejs
@@ -2,7 +2,8 @@
 
 
 <div id="property-container">
-
+  
+    <!-- ADD Button -->
     <a id="add-btn" href="/property/form?type=create">
         <div class="property-item add-btn">
           <img src="https://cdn.onlinewebfonts.com/svg/img_51677.png" width=160px height=160px></img>
@@ -12,46 +13,27 @@
     
     <div class="property-item" id="prop-...">
         <img width=200px height=160px src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.wrGDCtxJc2rb9rgfGaQSCwHaE7%26pid%3DApi&f=1"></img>
-        <span class="card-title">Title</span>
-        <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
+        <span class="card-title">Sample Title</span>
+        <a href="#" class="application-count" count=""><button style="color: rgb(0, 132, 255);" > Applications: 5</button></a>
         <div class="card-btn-container">
           <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
           <a href="#"><button>Delete</button></a>
         </div>
     </div>
+ 
+    <% for(prop of properties){ %>
 
-
-    <div class="property-item">
-      <img width=200px height=160px src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.wrGDCtxJc2rb9rgfGaQSCwHaE7%26pid%3DApi&f=1"></img>
-      <span class="card-title">Title</span>
-      <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
-      <div class="card-btn-container">
-        <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
-        <a href="#"><button>Delete</button></a>
+      <div class="property-item" id="property-<%= prop._id %>">
+        <img width=200px height=160px src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.wrGDCtxJc2rb9rgfGaQSCwHaE7%26pid%3DApi&f=1"></img>
+        <span class="card-title"><%= prop.title %></span>
+        <a href="#" class="application-count" count=""><button <% if(prop.applications.length>0){ %> style="background-color: red;" <% } %>> Applications: <%= prop.applications.length %></button></a>
+        <div class="card-btn-container">
+          <a href="/property/form?type=edit&id=<%= prop._id %>"><button>Edit</button></a>
+          <a href="/property/delete/<%= prop._id %>"><button>Delete</button></a>
+        </div>
       </div>
-    </div>
 
-    <div class="property-item">
-      <img width=200px height=160px src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.wrGDCtxJc2rb9rgfGaQSCwHaE7%26pid%3DApi&f=1"></img>
-      <span class="card-title">Title</span>
-      <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
-      <div class="card-btn-container">
-        <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
-        <a href="#"><button>Delete</button></a>
-      </div>
-    </div>
-
-    <div class="property-item">
-      <img width=200px height=160px src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.wrGDCtxJc2rb9rgfGaQSCwHaE7%26pid%3DApi&f=1"></img>
-      <span class="card-title">Title</span>
-      <a href="#" class="application-count" count=""><button> Applications: 0</button></a>
-      <div class="card-btn-container">
-        <a href="/property/form?type=edit&id=ID"><button>Edit</button></a>
-        <a href="#"><button>Delete</button></a>
-      </div>
-    </div>
-
-
+    <% } %> 
 
 
 </div>
