seller home ui improvement

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,7 +1,7 @@
 * {
   position: relative; }
   * body {
-    background-color: #82f0ff;
+    background-color: lightsteelblue;
     position: relative;
     height: 100%;
     width: 100%; }
