--- a/assets/css/property_cards.css
+++ b/assets/css/property_cards.css
@@ -7,14 +7,13 @@
   border-radius: 30px;
   flex-direction: row;
   justify-content: space-evenly;
-  flex-wrap: wrap;
-  background-color: #d8ebfd; }
+  flex-wrap: wrap; }
   #property-container #add-btn {
     text-decoration: none; }
   #property-container .property-item {
     background-color: #b8d5f0;
     width: 215px;
-    height: 300px;
+    height: 320px;
     margin: 20px;
     padding: 6px;
     border-radius: 10px;
