--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,11 +1,10 @@
-*{
+* {
+  position: relative;
+
+  body {
+    background-color: lightsteelblue;
     position: relative;
-    
-    
-    body {
-        background-color: rgb(130, 240, 255);;
-        position: relative;
-        height: 100%;
-        width: 100%;
-    }
+    height: 100%;
+    width: 100%;
+  }
 }
