--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,34 +12,84 @@ code {
     monospace;
 }
 
+/* HEADER */
 #header-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 10px;
-  border: 2px solid blue;
+  padding: 10px;
+  background-color: cornflowerblue;
+  box-shadow: 0px 0px 10px 0px #000000;
+  font-size: 1.4rem;
 }
 
 #header-container * {
-  text-decoration: none;
-}
-
-#tabs-container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  text-decoration: none;
+}
+
+.logo {
+  padding: 6px;
 }
 
 #tabs-container * {
-  padding: 10px;
+  padding: 6px;
+  margin-right: 6px;
 }
 
-#profile {
+#tabs-container *:hover {
+  color: blue;
+}
+
+#profile-links * {
+  padding: 6px;
+  margin-right: 6px;
+}
+
+#profile-links *:hover {
+  color: blue;
+}
+
+/* Sign-in/ Sign-up Form */
+.form-container {
+  margin: auto;
+  width: 30%;
+  min-width: 250px;
+  max-width: 500px;
+  border: rgb(51, 123, 255) solid 2px;
+  padding: 10px 0px 25px 0px;
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
+  flex-direction: column;
+  background-color: cornflowerblue;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px #000000;
 }
 
-#profile * {
-  padding: 10px;
+.form-container .form-title {
+  margin: auto;
+  padding: 2px 0px 15px 0px;
+}
+
+.form-container input,
+button {
+  border: none;
+  margin: auto;
+  width: 75%;
+  padding: 8px 20px 8px 20px;
+  border-radius: 4px;
+}
+
+.form-container a {
+  margin-top: 10px;
+  padding: 8px;
+  text-decoration: none;
+  color: blue;
+  border-radius: 15px;
+}
+.form-container a:hover {
+  box-shadow: 0px 0px 5px 0px #1c6b99;
+  background-color: rgb(136, 168, 228);
 }
