--- a/client/src/index.css
+++ b/client/src/index.css
@@ -93,3 +93,53 @@ button {
   box-shadow: 0px 0px 5px 0px #1c6b99;
   background-color: rgb(136, 168, 228);
 }
+
+/* FILTER */
+#filter-main {
+  margin: auto;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 3px;
+  box-shadow: 1px 0px 5px 0px #808080;
+  padding-bottom: 20px;
+}
+
+#filter-container {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+
+.filter-item {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.filter-title {
+  margin-bottom: 10px;
+}
+
+.filter-value label {
+  background-color: rgb(180, 188, 211);
+  border-radius: 3px;
+  padding: 3px;
+  margin: 3px;
+}
+
+.filter-value input:checked + label {
+  background-color: rgb(114, 255, 114);
+  border-radius: 3px;
+  padding: 3px;
+  margin: 3px;
+}
+
+.filter-value input[type='radio'] {
+  display: none;
+}
