--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,6 +68,16 @@ code {
   box-shadow: 0px 0px 10px 0px #000000;
 }
 
+.form-error {
+  margin: auto;
+  width: auto;
+  background-color: indianred;
+  color: rgb(110, 0, 0);
+  border-radius: 10px;
+  padding: 5px 15px 5px 15px;
+  max-width: fit-content;
+}
+
 .form-container .form-title {
   margin: auto;
   padding: 2px 0px 15px 0px;
@@ -123,6 +133,7 @@ button {
 }
 
 .filter-title {
+  margin: auto;
   margin-bottom: 10px;
 }
 
