--- a/client/src/index.css
+++ b/client/src/index.css
@@ -186,7 +186,8 @@ button {
 #property-container .property-item {
   background-color: #b8d5f0;
   width: 30%;
-  min-width: 300px;
+  max-width: 310px;
+  min-width: 280px;
   height: 350px;
   margin: 20px;
   padding: 6px;
@@ -220,6 +221,7 @@ button {
 
 .property-item img {
   width: 100%;
+  max-width: 300px;
   border-radius: 50px;
   margin-bottom: 10px;
 }
