--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -17,8 +17,34 @@
       padding: 10px;
       margin: 5px;
       border-radius: 10px;
+      flex-wrap: wrap;
       background-color: rgb(184, 213, 240);
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6);
+
+      .div {
+        display: flex;
+        flex-direction: row;
+        padding: 10px;
+
+        .property-pic {
+          width: 150px;
+          height: 150px;
+        }
+
+        .tenant-avatar {
+          width: 100px;
+          height: 100px;
+          border-radius: 50%;
+        }
+
+        .details {
+          margin: auto;
+          margin-left: 15px;
+          display: flex;
+          flex-direction: column;
+          justify-content: start;
+        }
+      }
 
       .btns {
         margin-right: 20px;
